# pokegraph

./: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: black.yml
data/: abomasnow.csv  abra.csv  absol.csv  accelgor.csv  aegislash-shield.csv  aerodactyl.csv  aggron.csv  aipom.csv  alakazam.csv  alcremie.csv  alomomola.csv  altaria.csv  amaura.csv  ambipom.csv  amoonguss.csv  ampharos.csv  annihilape.csv  anorith.csv  appletun.csv  applin.csv  araquanid.csv  arbok.csv  arboliva.csv  arcanine.csv  arceus.csv  archen.csv  archeops.csv  arctibax.csv  arctovish.csv  arctozolt.csv  ariados.csv  armaldo.csv  armarouge.csv  aromatisse.csv  aron.csv  arrokuda.csv  articuno.csv  audino.csv  aurorus.csv  avalugg.csv  (+946 more)
pokegraph/: __init__.py  module.py  pokegraph.py
tests/: coverage-report.sh  test_pokegraph.py
