# pyproject.toml

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pokegraph"
authors = [
    {name = "Luke Davis", email = "luke@lukealexdavis.co.uk"},
]
description = "A command-line tool that draws Pokémon base stats graphs in the terminal."
readme = "README.md"
version = "0.1.1"
requires-python = ">=3.7"
keywords = ["python", "CLI", "CLI tool", "graphs", "shell", "terminal", "pokemon"]
license = {text = "MIT"}
classifiers = [
	"Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "Topic :: Games/Entertainment :: Role-Playing",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
]
dependencies = [
    "colorama"
]

[project.optional-dependencies]
dev = ["black", "pytest"]

dynamic = ["version"]